<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/mob"
        android:layout_weight="0.10" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/buttonLogin"
        android:layout_gravity="left"
        android:layout_weight="0.10"
        android:textSize="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginText"
        android:id="@+id/LoginInfo"
        android:layout_gravity="left"
        android:layout_weight="0.04" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Catalog"
        android:id="@+id/buttonOrgs"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:textSize="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CatalogText"
        android:id="@+id/CatalogInfo"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Scanning"
        android:id="@+id/button3"
        android:layout_weight="0.10"
        android:textSize="24dp" />
</LinearLayout>